@@ -37,6 +37,8 @@ Improvements
 * [`2295 <https://cta-redmine.irap.omp.eu/issues/2295>`_] -
   Set reference time to CTA reference time in ``GCTAEventcube``, ``GCTAEventList``
   and ``GCTACubeExposure``
+* [`2291 <https://cta-redmine.irap.omp.eu/issues/2291>`_] -
+  ``GCsv`` interprets lines in CSV files starting with # as comment lines
 * [`2290 <https://cta-redmine.irap.omp.eu/issues/2290>`_] -
   Add ``GSkyMap::counts()`` and ``GSkyMap::flux()`` methods and ``clip()``
   friend operator, ``GNdarray`` ``sign()``, ``operator*=`` and ``operator/=``,
